# rig-wasm-compiler

./: Cargo.toml  README.md  build.rs  notes.md  setup_project.sh  tokio_with_wasm_documentation.md
examples/: rag_agent.rs  simple_agent.rs
src/: config.rs  lib.rs  main.rs
src/adapters/: http_client.rs  mod.rs  vector_store.rs
src/utils/: mod.rs  wasm_utils.rs
src/wasm_bindings/: agent.rs  mod.rs  rag.rs
tests/: integration_tests.rs  wasm_tests.rs
www/: index.html  index.js
