[package]
name = "rig-wasm-compiler"
version = "0.1.0"
edition = "2021"
description = "A tool for compiling Rig projects to WebAssembly"
license = "MIT"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"