[package]
name = "rig-wasm-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rig-core = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main" }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tokio_with_wasm = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11", features = ["json"] }
gloo-net = "0.3"
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
wasm-pack = "0.12"

[features]
default = ["console_error_panic_hook"]
